--- a/partials/forecast.html
+++ b/partials/forecast.html
@@ -4,5 +4,6 @@
   <div class="row">
     <div class="x-forecast--temp">{{day.high.fahrenheit}}˚<small>/{{day.low.fahrenheit}}˚</small></div>
     <div class="x-forecast--icon {{day.icon}}"></div>
+    <p class="x-forecast--condition">{{day.conditions}}</p>
   </div>
 </div>
