--- a/partials/today.html
+++ b/partials/today.html
@@ -3,4 +3,5 @@
   <p class="forecast--date">{{forecastWeekDay}}, {{forecastMonth}} {{forecastDay}}, {{forecastYear}}</p>
   <h2 class="forecast--temp">{{forecastHigh}}˚<small>/{{forecastLow}}˚</small></h2>
   <div class="forecast--icon {{forecastIcon}}"></div>
+  <p class="forecast--condition">{{condition}}</p>
 </div>
